--- a/project1/package.json
+++ b/project1/package.json
@@ -9,9 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^1.1.7",
     "@chakra-ui/react": "^1.8.6",
     "@emotion/react": "^11.8.1",
     "@emotion/styled": "^11.8.1",
+    "chakra-ui-bottom-navigation": "^1.1.3",
     "framer-motion": "^6.2.8",
     "next": "12.1.0",
     "react": "17.0.2",
