--- a/project1/package.json
+++ b/project1/package.json
@@ -13,6 +13,8 @@
     "@chakra-ui/react": "^1.8.6",
     "@emotion/react": "^11.8.1",
     "@emotion/styled": "^11.8.1",
+    "@fontsource/open-sans": "^4.5.5",
+    "@fontsource/raleway": "^4.5.3",
     "chakra-ui-bottom-navigation": "^1.1.3",
     "framer-motion": "^6.2.8",
     "next": "12.1.0",
